# Unified-Analytical-Lakehouse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  design-decisions.md
docs/adr/: 001-dlt-over-fivetran.md  002-duckdb-over-snowflake.md  003-dagster-over-airflow.md  004-delta-rs-over-pyspark.md
examples/: airflow_equivalent.py
ingestion/: pipelines.py
ingestion/sources/: ad_spend_source.py  postgres_source.py  seo_api_source.py
orchestration/beacon_orchestration/: checks.py  definitions.py  schedules.py  sensors.py
orchestration/beacon_orchestration/assets/: bronze_assets.py  gold_assets.py  silver_assets.py
quality/: great_expectations.yml  run_checks.py
quality/checkpoints/: beacon_checkpoint.yml
quality/expectations/: stg_clients_suite.json  stg_leads_suite.json
seeds/: generate_ad_spend.py  generate_postgres.py  generate_seo_api.py  load_bronze_duckdb.py
serving/: main.py
serving/routers/: client_context.py
tests/: test_contract_breaking.py  test_ingestion.py  test_serving.py  test_transforms.py
transform/beacon/: dbt_project.yml  package-lock.yml  profiles.yml
transform/beacon/models/: sources.yml
transform/beacon/models/contracts/: schema.yml
transform/beacon/models/marts/: dim_clients.sql  fct_ad_performance.sql  fct_appointments.sql  fct_leads.sql
transform/beacon/models/staging/: stg_ad_spend.sql  stg_appointments.sql  stg_clients.sql  stg_leads.sql  stg_seo_rankings.sql
