[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-lakehouse"
version = "0.1.0"
description = "Production-grade unified analytical lakehouse for local-business marketing analytics"
requires-python = ">=3.11"
dependencies = [
    # Ingestion
    "dlt[filesystem,deltalake]>=0.4.12",
    "psycopg2-binary>=2.9",
    # Data generation
    "faker>=24.0",
    # Delta Lake
    "deltalake>=0.17",
    # Object storage
    "boto3>=1.34",
    "s3fs>=2024.2",
    # dbt
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    # DuckDB
    "duckdb>=0.10",
    # Orchestration
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "dagster-dbt>=0.23",
    # Data quality (GX 1.x changed the API; pin to the V3 config era)
    "great-expectations>=0.18,<1.0",
    # Serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    # Utilities
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "locust>=2.28",
]

[tool.setuptools.packages.find]
include = ["ingestion*", "orchestration*", "seeds*", "serving*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["orchestration", "ingestion", "serving", "seeds", "quality"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a running database and dbt (deselect with '-m not integration')",
]
